crates/cadenza-syntax/src/generated/snapshots/cadenza_syntax__generated__test_data__invalid_parse__error_unexpected_rbracket__invalid_parse_error_unexpected_rbracket_errors.snap
---
source: crates/cadenza-syntax/src/generated/test_data.rs
expression: "]\n"
---
[
    ParseError {
        span: Span {
            start: 0,
            end: 1,
        },
        message: "expected expression, found ]",
    },
]
